src/golden/cards/templates/nested/typeerrors/test.golden/cannotSendToCard.fl
	struct MyX
	
	card CannotSendToCardTemplate
		state 
			MyX x
		
		template top
			hold <- x => top
			